# RustMaliciousBotInfiniteRedirection

./: Cargo.toml  Dockerfile  pyproject.toml
src/: main.rs
